# AoC2021

./: README.md
day1/rust/: Cargo.toml
day1/rust/src/: main.rs
day1/zig/: .gitignore  CMakeLists.txt  build.zig
rust/: Cargo.toml
rust/src/: lib.rs  playground.rs  runner.rs
rust/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
