[package]
name = "Aoc-day1-2021"
version = "0.1.0"
authors = ["Neil <neilhube12@gmail.com"]
edition = "2021"
description="Day 1 of AoC 2021"
categories=["algorithms","data-structures"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3